--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
+    "mysql2": "^3.5.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
