Feat: OAuth for naver, kakao

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/platform-socket.io": "^9.4.0",
@@ -44,6 +45,7 @@
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.7.0",
     "pg": "^8.10.0",
     "react": "^18.2.0",
